[gd_scene load_steps=4 format=3 uid="uid://dnljxafte1ren"]

[ext_resource type="Script" path="res://scenes/FishSpawner.gd" id="1_ojxsq"]
[ext_resource type="PackedScene" uid="uid://cv3t8142ml1ac" path="res://scenes/goldfish.tscn" id="2_x8hfy"]

[sub_resource type="Curve3D" id="Curve3D_ma22x"]
resource_local_to_scene = true
_data = {
"points": PackedVector3Array(-5.14273, -0.0462437, 0.208793, 5.14273, 0.0462437, -0.208793, -0.0404944, 0.00654149, 8.21833, -0.0519505, 0.870718, 4.91411, 0.0519505, -0.870718, -4.91411, 8.11075, -7.15256e-07, 0.249548, 5.13673, 0.524687, 0.0671964, -5.13673, -0.524687, -0.0671964, 0.0371262, -0.00625491, -7.85322, -0.334967, -1.02332, -5.55375, 0.334967, 1.02332, 5.55375, -8.01559, 0.000407457, 0.273622, -3.59722, -0.033452, 0.0664568, 3.59722, 0.033452, -0.0664568, -0.0404944, 0.00654149, 8.21833),
"tilts": PackedFloat32Array(0, 0, 0, 0.0293905, 0)
}
point_count = 5
up_vector_enabled = false

[node name="FishSpawner" type="Node3D"]
transform = Transform3D(1, -2.91038e-11, 0, 2.91038e-11, 1, 0, 0, -5.82077e-11, 1, 0, -2.32831e-10, -8.9407e-08)
script = ExtResource("1_ojxsq")
fish_scene = ExtResource("2_x8hfy")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="SpawnPath" type="Path3D" parent="."]
transform = Transform3D(1, 2.91038e-11, 0, -2.91038e-11, 1, 0, -1.69407e-21, 5.82077e-11, 1, 0.039811, 7.15488e-07, -0.130926)
curve = SubResource("Curve3D_ma22x")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(0.0405661, -0.0089769, -0.999137, 4.65661e-10, 0.99996, -0.00898429, 0.999177, 0.000364457, 0.0405645, -0.0404944, 0.00654149, 8.21833)

[node name="Dummy" type="Node3D" parent="SpawnPath/SpawnLocation"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
